--- a/public/style.css
+++ b/public/style.css
@@ -71,3 +71,9 @@ div .ui.fluid.left.icon.input {
 #error {
   color: red;
 }
+
+#blurry-text {
+  color: transparent;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
