--- a/public/style.css
+++ b/public/style.css
@@ -77,3 +77,10 @@ div .ui.fluid.left.icon.input {
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   pointer-events: none;
 }
+
+span {
+  font-family: '8BITWONDERNominal';
+  font-weight: normal;
+  font-style: normal;
+  margin-top: 25px;
+}
